--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "builds": [{ "src": "app.js", "use": "@now/node" }],
-  "routes": [{ "src": "(.*)", "dest": "app.js" }]
+  "builds": [{ "src": "index.js", "use": "@now/node" }],
+  "routes": [{ "src": "(.*)", "dest": "index.js" }]
 }
 
