--- a/package.json
+++ b/package.json
@@ -8,5 +8,10 @@
   "dependencies": {
     "ejs": "~2.6.1",
     "express": "~4.16.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.5",
+    "typescript": "^5.6.2"
   }
 }
