--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "builds": [{ "src": "./dist/index.js", "use": "@now/node" }],
-  "routes": [{ "src": "(.*)", "dest": "./dist/index.js" }]
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/index.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "src/index.ts"
+    }
+  ]
 }
-
