--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "echo 'Please use `vercel dev` to start the server'"
+    "start": "node src/index.js",
+    "build": "cp src/views dist/views && tsc"
   },
   "dependencies": {
     "ejs": "~2.6.1",
@@ -12,6 +13,10 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "postcss-cli": "^11.0.0",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
 }
